...
    const { createTransaction } = useTransaction();
    const { listCategories } = useCategories();

    const sendToBackend = async() => {
        // Minimalna validacija
        if (!amount || !date || !categoryId) {
            setErrorMessage("Iznos, kategorija i datum su obavezni.");
            return;
        }

        setErrorMessage(''); // Makni prijasnje errore
        setIsSaving(true); // Prikazi loadanje

...
                            style={styles.categoryBottomSheet}
                            onPress={(e) => e.stopPropagation()}
                        >
                            {/* Header */}
                            <View style={styles.modalHeader}>
                                <View style={styles.modalHandle} />
                                <Text style={styles.modalTitle}>Odaberite Kategoriju</Text>
                            </View>

                            {/* Kategorije */}
                            {loadingCategories ? (
                                <View style={styles.loadingContainer}>
                                    <ActivityIndicator size="large" color="#2563EB" />
...
