...
            setUser(response.user);

            console.log("Login uspio");
            return response.user; // Vrati user objekt
        }
        catch(error: any) {
            console.error("Login failed: ", error);
            throw new Error(error.message || 'Neuspjesna prijava');
        }

    }   


...
