appId: "com.racunko.progi"

---
- launchApp
- assertVisible: "Prijava"

- tapOn:
    id: "login-button-landing"

- tapOn:
    id: "username-input"
- inputText: "testuser123"

- tapOn:
    id: "password-input"
- inputText: "@TestPassword123!"

- tapOn:
    id: "login-button"

- assertVisible: "Fiksni"

- tapOn:
    id: "profile-tab-icon"

- tapOn:
    id: "logout-button"

- assertVisible: "Prijava"
