appId: "com.racunko.progi"

---
- launchApp
- assertVisible: "Prijava"

- tapOn:
    id: "login-button-landing"

- tapOn:
    id: "username-input"
- inputText: "lukak2"

- tapOn:
    id: "password-input"
- inputText: "wrongpassword"

- tapOn:
    id: "login-button"

- assertVisible: "Login failed"
