appId: "com.racunko.progi"

---
# Test: Registracija novog korisnika
- launchApp
- assertVisible: "Prijava"

- tapOn:
    id: "registration-button"

# Username
- tapOn:
    id: "signup-username-input"
- inputText: "testuser123"


# Email
- tapOn:
    id: "signup-email-input"
- inputText: "test@example.com"


# Password
- tapOn:
    id: "signup-password-input"
- inputText: "@TestPassword123!"


- tapOn:
    id: "signup-button"

- assertVisible: "Fiksni"
