appId: "com.racunko.progi"

---
- launchApp
- assertVisible: "Prijava"

- tapOn:
    id: "login-button-landing"

- tapOn:
    id: "username-input"
- inputText: "testuser123"

- tapOn:
    id: "password-input"
- inputText: "@TestPassword123!"

- tapOn:
    id: "login-button"

- assertVisible: "Fiksni"

- tapOn:
    id: "group-tab-icon"
- assertVisible: "Grupe"

- tapOn:
    id: "camera-tab-icon"

- tapOn:
    id: "chatbot-tab-icon"
- assertVisible: "Financijski asistent"

- tapOn:
    id: "profile-tab-icon"
- assertVisible: "Moj profil"

- tapOn:
    id: "home-tab-icon"
- assertVisible: "Fiksni"
